--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -35,7 +35,13 @@
     border-radius:  0px 0px 8px 8px;
     position: absolute;
     bottom: 0;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.btn-cart p{
+    margin-right: 10px;
 }
 .btn-cart:hover{
     background-color: orange;
